# oculus-linux-kernel

./: .gitignore  .ignore  Android.mk  CONTRIBUTING.md  CREDITS  MAINTAINERS  Makefile  README.meta.md  gen_headers_arm.bp  gen_headers_arm64.bp  vmlinux.profdata
Documentation/: kernel-parameters.txt  st-sensors.txt
arch/: Kconfig
block/: bio.c  blk-cgroup.c  blk-core.c  blk-flush.c  blk-merge.c  blk-mq-tag.c  blk-mq-tag.h  blk-mq.c  blk-mq.h  blk.h  genhd.c  partition-generic.c
certs/: Makefile
crypto/: algif_skcipher.c  shash.c  zstd.c
drivers/: Makefile
fs/: aio.c  binfmt_elf.c  block_dev.c  buffer.c  dcache.c  direct-io.c  eventpoll.c  exec.c  file.c  file_table.c  inode.c  namei.c  namespace.c  seq_file.c  super.c
init/: Kconfig
kernel/: Kconfig.locks  Makefile  auditsc.c  cpuset.c  fork.c  futex.c  gen_kheaders.sh  irq_work.c  kallsyms.c  module.c  ptrace.c  reboot.c  seccomp.c  signal.c  sysctl.c
lib/: Kconfig.debug  Makefile  test_bpf.c  ubsan.c  vsprintf.c
mm/: Kconfig  Makefile  debug.c  filemap.c  gup.c  huge_memory.c  ksm.c  maccess.c  memcontrol.c  memory.c  mempolicy.c  migrate.c  mmap.c  mremap.c  nommu.c  page-writeback.c  rmap.c  shmem.c  slab_common.c  slub.c  swap.c  usercopy.c  util.c  vmalloc.c  vmscan.c  vmstat.c
net/: socket.c
scripts/: Makefile  Makefile.host  Makefile.lib  build-all.py  check-config-debug-exemptions  check-config-perf-exemptions  gen_compile_commands.py  link-vmlinux.sh  mkcompile_h  pahole-flags.sh
security/: Kconfig  (+1 more)
techpack/eva/include/uapi/media/: Makefile.am  configure.ac  msm_eva_private.h
(+5648 files in other folders)
