AC_PREREQ(2.69)
AC_INIT([qti_eva_kernel_headers],1.0.0)
AM_INIT_AUTOMAKE([-Wall gnu foreign subdir-objects])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Check for programs
AM_PROG_AS
AM_PROG_AR
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_LIBTOOL
PKG_PROG_PKG_CONFIGG

AC_CONFIG_FILES([ Makefile ])
AC_OUTPUT
